@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999941';
+our $VERSION='0.99999942';
 
 
 use 5.005;
